<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        style="@style/TechCare.ScreenRoot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/page_padding_horizontal">

            <TextView
                android:id="@+id/tvBookingInfo"
                style="@style/TechCare.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TechCare.CardLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/label_assign_technician" />

            <Spinner
                android:id="@+id/spTechnician"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs" />

            <TextView
                style="@style/TechCare.CardLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/label_change_status" />

            <Spinner
                android:id="@+id/spStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEstimatedCompletion"
                style="@style/TechCare.TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEstimatedCompletion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_estimated_completion"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRemarks"
                style="@style/TechCare.TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRemarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_admin_remarks"
                    android:inputType="textMultiLine"
                    android:minLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                style="@style/TechCare.PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/action_save_changes" />

            <TextView
                style="@style/TechCare.CardLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/status_history_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStatusHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
