<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        style="@style/TechCare.ScreenRoot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/page_padding_horizontal">

        <TextView
            style="@style/TechCare.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_filter_status" />

        <Spinner
            android:id="@+id/spStatusFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchBookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:queryHint="@string/hint_search_booking" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBookings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_md"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvEmpty"
            style="@style/TechCare.EmptyState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_bookings_empty"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
