<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        style="@style/TechCare.ScreenRoot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/page_padding_horizontal">

        <TextView
            style="@style/TechCare.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_device_category" />

        <Spinner
            android:id="@+id/spDeviceFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/TechCare.PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/action_add" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_md"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvEmpty"
            style="@style/TechCare.EmptyState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips_admin_empty"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
